# almagest

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  build.zig  build.zig.zon
.github/workflows/: deploy-guide.yml  general.yml
almagest/: Cargo.toml
almagest-wasm/: Cargo.toml
almagest-wasm/examples/: characteristic_velocity.html  index.html  momentum_exchange_tether.html
almagest-wasm/src/: lib.rs
almagest/examples/: comprehensive_demo.rs  tether_materials.rs
almagest/src/: celestials.rs  kepler.rs  lib.rs  materials.rs  tethers.rs  utils.rs
guide/: Cargo.toml  README.md  book.toml
guide/src/: 404.md  SUMMARY.md  introduction.md  reference.md
guide/src/chapter_1/: README.md  calculations.md  history.md
guide/theme/fonts/: fonts.css
modeling/: Cargo.toml
modeling/src/: lib.rs  main.rs
src/: conversions.zig  easter.zig  julian_date.zig  kepler.rs  lib.rs  main.zig  moon.zig  root.zig  symbols.zig  tethers.rs  utils.rs
