[package]
name = "almagest"
version = "0.0.1"
edition = "2024"
license = "MIT"
description = "A library for orbital calculations"
homepage = "https://github.com/chrisbodhi/almagest"
repository = "https://github.com/chrisbodhi/almagest"
readme = "README.md"
exclude = [".github/*"]

[lib]
crate-type = ["rlib"]

[features]
default = ["std"]
std = []

[dependencies]
approx = "0.5.1"
libm = "0.2.15"
