[workspace]
members = ["almagest", "almagest-wasm"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
homepage = "https://github.com/chrisbodhi/almagest"
repository = "https://github.com/chrisbodhi/almagest"
version = "0.0.1"

# Shared dependencies across workspace
[workspace.dependencies]
almagest = { path = "almagest" }
approx = "0.5.1"
libm = "0.2.15"
wasm-bindgen = "0.2"